# zoneclock

./: .gitignore  basic.py  boot_out.txt  colors2.py  main.py  networking.py  pyproject.toml
samples/: clock_code.py  code 2.py  colors.py  test_scroll.py
